# PlotJuggler

./: CMakeLists.txt
include/PlotJuggler/: plotdata.h  ring.hpp
plotter_gui/: CMakeLists.txt  customtracker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotcurve.cpp  plotcurve.h  plotgrid.h  plotlegend.h  plotmagnifier.h  plotmatrix.cpp  plotmatrix.h  plotseries.h  plotwidget.cpp  plotwidget.h  plotzoomer.h  removecurvedialog.h
plotter_gui/impl/: customtracker.cpp  plotlegend.cpp  plotmagnifier.h  plotzoomer.cpp
plotter_gui/impl_qtcharts/: customtracker.cpp  plotcurve.cpp  plotcurve_impl.cpp  plotgrid.cpp  plotlegend.cpp  plotmagnifier.cpp  plotseries.cpp  plotwidget_impl.cpp  plotzoomer.cpp
plotter_gui/impl_qwt/: customtracker.cpp  plotcurve.cpp  plotcurve_impl.cpp  plotcurve_prev.cpp  plotgrid.cpp  plotmagnifier.cpp  plotmagnifier.h  plotwidget.cpp  plotwidget_impl.cpp  plotzoomer.cpp  plotzoomer.h
qtcharts/: CMakeLists.txt  README.md
qtcharts/include/QtCharts/: QtCharts
qtcharts/src/: chartdataset.cpp  chartpresenter_p.h
qtcharts/src/animations/: CMakeLists.txt
qtcharts/src/areachart/: CMakeLists.txt
qtcharts/src/axis/: CMakeLists.txt
qtcharts/src/barchart/: CMakeLists.txt
qtcharts/src/boxplotchart/: CMakeLists.txt
qtcharts/src/candlestickchart/: CMakeLists.txt
qtcharts/src/domain/: CMakeLists.txt
qtcharts/src/layout/: CMakeLists.txt
qtcharts/src/legend/: CMakeLists.txt
qtcharts/src/linechart/: CMakeLists.txt
qtcharts/src/piechart/: CMakeLists.txt
qtcharts/src/scatterchart/: CMakeLists.txt
qtcharts/src/splinechart/: CMakeLists.txt
qtcharts/src/themes/: CMakeLists.txt
qtcharts/src/xychart/: CMakeLists.txt
